<resources>
    <string name="app_name">Movie</string>
    <string name="name">Cristian Sandor</string>
    <string name="login_title">Account Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="trip_name">Trip name</string>
    <string name="destination">Destination</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="trip_type">Trip type</string>
    <string name="city_break">City break</string>
    <string name="see_side">See side</string>
    <string name="mountains">Mountains</string>
    <string name="price">Price(0€)</string>
    <string name="rating">Rating</string>
    <string name="save">SAVE</string>
    <string name="date">DD/MM/YYYY</string>
    <string name="movie_name">Interstellar</string>
    <string name="movie_genre">Adventure, Drama, Sci-Fi</string>
    <string name="movie_actors"> Matthew McConaughey</string>
    <string name="imd_link">IMDB</string>
    <string name="movie_description">Earth\'s future has been riddled by disasters, famines, and droughts. There is only one way to ensure mankind\'s survival: Interstellar travel. A newly discovered wormhole in the far reaches of our solar system allows a team of astronauts to go where no man has gone before, a planet that may have the right environment to sustain human life.</string>
</resources>