<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">
<TextView
    android:id="@+id/tvGoogleAccount"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="30sp"
    android:text="@string/login_title"
    android:layout_gravity="center_horizontal"/>
    <LinearLayout
        android:id="@+id/llUserNameContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/ivUserIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/user"/>
        <EditText
            android:id="@+id/etUsername"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/username"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llPasswordContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/ivKeyIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/key"/>
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bLogin"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:text="@string/login"/>
    </LinearLayout>
</LinearLayout>

