<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieActivity"
    android:padding="10dp">
<ImageView
    android:id="@+id/ivMoviePoster"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:background="@drawable/interstellar"/>
    <TextView
        android:id="@+id/tvMovieName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/ivMoviePoster"
        android:text="@string/movie_name"
        android:textStyle="bold"
        android:textSize="24dp"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:id="@+id/tvGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/ivMoviePoster"
        android:layout_below="@id/tvMovieName"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/movie_genre"/>
    <TextView
        android:id="@+id/tvActors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/ivMoviePoster"
        android:layout_below="@id/tvGenre"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/movie_actors"/>
    <RatingBar
        android:id="@+id/rbMovieRating"
        android:layout_below="@id/ivMoviePoster"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="4.8"
        android:stepSize="0.1"/>
    <TextView
        android:id="@+id/tvMovieDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@id/rbMovieRating"
        android:text="@string/movie_description"/>
    <TextView
        android:id="@+id/tvLinkIMDB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imd_link"
        android:layout_below="@id/tvMovieDescription"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:clickable="true"/>
    <LinearLayout
        android:id="@+id/flMovieSuggestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:padding="2dp"
        android:gravity="center">
        <LinearLayout
            android:id="@+id/llMovie1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="5dp">
    <ImageView
        android:id="@+id/ivMovie1"
        android:layout_width="75dp"
        android:layout_height="75dp" />
            <RatingBar
                android:id="@+id/rbMovie1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:numStars="5"
                android:rating="4.8"
                android:stepSize="0.1"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llMovie2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="5dp">
            <ImageView
                android:id="@+id/ivMovie2"
                android:layout_width="75dp"
                android:layout_height="75dp" />
            <RatingBar
                android:id="@+id/rbMovie2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:numStars="5"
                android:rating="4.8"
                android:stepSize="0.1"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llMovie3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="5dp">
            <ImageView
                android:id="@+id/ivMovie3"
                android:layout_width="75dp"
                android:layout_height="75dp"/>
            <RatingBar
                android:id="@+id/rbMovie3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:numStars="5"
                android:rating="4.8"
                android:stepSize="0.1"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llMovie4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="5dp">
            <ImageView
                android:id="@+id/ivMovie4"
                android:layout_width="75dp"
                android:layout_height="75dp" />
            <RatingBar
                android:id="@+id/rbMovie4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:numStars="5"
                android:rating="4.8"
                android:stepSize="0.1"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>